file(GLOB_RECURSE ASIO_EXAMPLES_SOURCES "*.cpp")
foreach(ASIO_EXAMPLES_SOURCE ${ASIO_EXAMPLES_SOURCES})
    get_filename_component(ASIO_EXAMPLES_TARGET ${ASIO_EXAMPLES_SOURCE} NAME_WE)
    string(REPLACE ".cpp" "" ASIO_EXAMPLES_TARGET ${ASIO_EXAMPLES_TARGET})
    add_executable(asio_${ASIO_EXAMPLES_TARGET} ${ASIO_EXAMPLES_SOURCE})
    target_include_directories(asio_${ASIO_EXAMPLES_TARGET} PRIVATE ${FZ_NET_ASIO_INCLUDE_DIR})
endforeach()
