macro(FZ_NET_ADD_TEST_EXE_TARGET TARGET_NAME)
    add_executable(${TARGET_NAME} ${ARGN})
    target_link_libraries(${TARGET_NAME} PRIVATE fz_net)
endmacro()

file(GLOB_RECURSE FZ_NET_TESTS_SOURCES "*.cpp")
foreach(FZ_NET_TESTS_SOURCE ${FZ_NET_TESTS_SOURCES})
    get_filename_component(FZ_NET_TESTS_TARGET ${FZ_NET_TESTS_SOURCE} NAME_WE)
    string(REPLACE ".cpp" "" FZ_NET_TESTS_TARGET ${FZ_NET_TESTS_TARGET})
    FZ_NET_ADD_TEST_EXE_TARGET("fz_net_${FZ_NET_TESTS_TARGET}" ${FZ_NET_TESTS_SOURCE})
endforeach()